_sass/3-modules/_search.scss
/* Search */
.search {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  opacity: 0;
  visibility: hidden;
  background-color: $white;
  transition: all 0.5s ease-in-out;
  &.is-visible {
    opacity: 1;
    visibility: visible;
  }
  @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
    -webkit-backdrop-filter: saturate(180%) blur(10px);
    backdrop-filter: saturate(180%) blur(10px);
    background-color: rgba($white, .9);
  }
}

.search__box {
  position: relative;
  max-width: 550px;
  width: 100%;
  margin: 0 auto;
  padding-top: 200px;

  .search__close {
    position: absolute;
    right: 0;
    bottom: 10px;
    display: block;
    padding: 0 4px;
    font-size: 30px;
    line-height: 1;
    color: $dark;
    transition: all .25s;
    cursor: pointer;
    &:hover {
      transform: rotate(90deg);
      color: color.adjust($dark, $lightness: -15%);
    }
  }

  @media only screen and (max-width: $tablet) {
    width: 80%;
    padding-top: 100px;
  }
  @media only screen and (max-width: $mobile) {
    width: 90%;
  }
}

.search__group {
  position: relative;
  margin-bottom: 30px;

  .search__text {
    width: 100%;
    height: auto;
    padding: 0 46px 12px 0;
    font-family: $heading-font-family;
    font-size: 30px;
    font-weight: 700;
    line-height: 1;
    border: 0;
    border-bottom: 5px solid $dark;
    color: $text-color;
    background-color: transparent;
    &::-webkit-input-placeholder {
      font-weight: 700;
      color: $dark;
    }
    &::placeholder {
      font-weight: 700;
      color: $dark;
    }
    &::-ms-clear {
      display: none;
    }
    @media only screen and (max-width: $mobile) {
      font-size: 30px;
    }
    &:focus {
      color: $text-color;
      border-bottom-color: $brand-color;
    }
  }
}

.search-results-list {
  height: 55vh;
  padding: 0 0 25px 0;
  margin: 0;
  list-style: circle;
  font-weight: 700;
  color: $text-color;
  overflow: auto;
  white-space: normal;

  .search-results__item {
    display: flex;
    align-items: center;
    padding: 13px 8px;
    margin-bottom: 0;
    border: 0;
    border-radius: 0;
    background-color: transparent;
    transition: background-color .15s ease;
    &:hover,
    &:focus-within {
      background-color: rgba($brand-color, .45);

      .search-results__link {
        color: $text-color;
      }
    }
  }

  .search-results__image {
    position: relative;
    display: inline-block;
    margin-right: 15px;
    width: 108px;
    min-width: 108px;
    height: 64px;
    border-radius: 0;
    border: 0;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-color: $white;

    @media only screen and (max-width: $mobile) {
      width: 92px;
      min-width: 92px;
      height: 56px;
    }
  }

  .search-results__link {
    position: relative;
    display: block;
    padding: 6px 0;
    font-family: $heading-font-family;
    font-size: 16px;
    line-height: 24px;
    font-weight: 700;
    color: $text-color;
    transition: color .15s ease-in-out;
  }

  .search-results-date {
    display: block;
    margin-top: 5px;
    font-family: $base-font-family;
    font-size: 12px;
    line-height: 1;
    font-weight: 400;
    color: $gray-blue;
  }

  .no-results {
    list-style: none;
    font-weight: 500;
  }
}

